--- a/mls-rs-identity-x509/Cargo.toml
+++ b/mls-rs-identity-x509/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mls-rs-identity-x509"
 version = "0.6.0"
 edition = "2021"
+description = "X509 Identity utlities for mls-rs"
+documentation = "https://docs.rs/crate/mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 default = ["std"]
