Update cargo package metadata for each package (#4)
* Update cargo package metadata for each package

* Remove benchmarks on PR until they work

* Update mls-rs-identity-x509/Cargo.toml

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

* Remove documentation link from metadata

* Update mls-rs-identity-x509/Cargo.toml

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

---------

Co-authored-by: Stephane Raux <94983192+stefunctional@users.noreply.github.com>

--- a/mls-rs-crypto-rustcrypto/Cargo.toml
+++ b/mls-rs-crypto-rustcrypto/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-crypto-rustcrypto"
 version = "0.6.0"
 edition = "2021"
+description = "RustCrypto based CryptoProvider for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs", "rust crypto"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 x509 = ["std", "mls-rs-identity-x509", "x509-cert", "spki", "sha1", "const-oid", "mls-rs-core/x509"]
