--- a/mls-rs-ffi/Cargo.toml
+++ b/mls-rs-ffi/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-ffi"
 version = "0.1.1"
 edition = "2021"
+description = "Helper crate to generate FFI definitions for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs", "ffi"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 default = ["openssl", "sqlcipher-bundled", "x509"]
