--- a/mls-rs-codec-derive/Cargo.toml
+++ b/mls-rs-codec-derive/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-codec-derive"
 version = "0.1.0"
 edition = "2021"
+description = "Derive macro crate for mls-rs-codec"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
 
 [lib]
 proc-macro = true
