--- a/mls-rs-codec/Cargo.toml
+++ b/mls-rs-codec/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-codec"
 version = "0.4.0"
 edition = "2021"
+description = "TLS codec and MLS specific encoding used by mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 default = ["std", "preallocate"]
