--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -2,6 +2,12 @@
 name = "mls-rs-core"
 version = "0.13.0"
 edition = "2021"
+description = "Core components and traits for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
+
 
 [features]
 default = ["std", "rfc_compliant", "fast_serialize"]
