--- a/mls-rs-crypto-openssl/Cargo.toml
+++ b/mls-rs-crypto-openssl/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-crypto-openssl"
 version = "0.5.0"
 edition = "2021"
+description = "OpenSSL based CryptoProvider for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs", "openssl"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 x509 = ["mls-rs-identity-x509"]
