--- a/mls-rs-crypto-traits/Cargo.toml
+++ b/mls-rs-crypto-traits/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-crypto-traits"
 version = "0.6.0"
 edition = "2021"
+description = "Crypto traits required to create a CryptoProvider for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 mock = ["std", "dep:mockall"]
