--- a/mls-rs-identity-x509/Cargo.toml
+++ b/mls-rs-identity-x509/Cargo.toml
@@ -2,6 +2,11 @@
 name = "mls-rs-identity-x509"
 version = "0.6.0"
 edition = "2021"
+description = "X509 Identity utilities for mls-rs"
+homepage = "https://github.com/awslabs/mls-rs"
+repository = "https://github.com/awslabs/mls-rs"
+keywords = ["mls", "mls-rs"]
+license = "Apache-2.0 OR MIT"
 
 [features]
 default = ["std"]
