Update docs.rs configuration and readme

--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -8,6 +8,11 @@ repository = "https://github.com/awslabs/mls-rs"
 keywords = ["crypto", "cryptography", "security", "mls", "e2ee"]
 categories = ["no-std", "cryptography"]
 license = "Apache-2.0 OR MIT"
+rust-version = "1.68.2"
+
+[package.metadata.docs.rs]
+features = ["external_client", "sqlite"]
+rustdoc-args = ["--cfg", "docsrs"]
 
 [features]
 default = ["std", "rayon", "rfc_compliant", "tree_index", "fast_serialize"]
