Update versions and resolve outdated dependencies (#11)
* Update versions and resolve outdated dependencies

* Protoc dependency update

* Fix CI issues

* Reset test harness integration

--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mls-rs"
-version = "0.33.0"
+version = "0.34.0"
 edition = "2021"
 description = "An implementation of Messaging Layer Security (RFC 9420)"
 homepage = "https://github.com/awslabs/mls-rs"
@@ -77,7 +77,6 @@ once_cell = { version = "1.18", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
 futures-test = "0.3.25"
 serde_json = "^1.0"
 rand = "0.8"
@@ -90,9 +89,11 @@ wasm-bindgen = { version = "^0.2.79" }
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = { version = "0.3.26", default-features = false }
 mls-rs-crypto-rustcrypto = { path = "../mls-rs-crypto-rustcrypto", features = ["browser"], version = "*" }
+criterion = { version = "0.5.1", default-features = false, features = ["plotters", "cargo_bench_support", "async_futures", "html_reports"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "*"}
+criterion = { version = "0.5.1", features = ["async_futures", "html_reports"] }
 
 # Benchmark crypto engine swaps
 [target.'cfg(awslc)'.dependencies]
