--- a/mls-rs-identity-x509/Cargo.toml
+++ b/mls-rs-identity-x509/Cargo.toml
@@ -14,7 +14,7 @@ std = ["mls-rs-core/std", "dep:thiserror"]
 
 [dependencies]
 async-trait = "0.1.74"
-mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["x509"], version = "*" }
+mls-rs-core = { path = "../mls-rs-core", default-features = false, features = ["x509"], version = "0.14.0" }
 maybe-async = "0.2.7"
 thiserror = { version = "1.0.40", optional = true }
 
