--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -21,7 +21,7 @@ test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
 
 [dependencies]
 async-trait = "0.1.74"
-mls-rs-codec = { version = "*", path = "../mls-rs-codec", default-features = false}
+mls-rs-codec = { version = "0.4.0", path = "../mls-rs-codec", default-features = false}
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 base64 = { version = "0.21.0", default-features = false, features = ["alloc"]}
