--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -11,17 +11,17 @@ license = "Apache-2.0 OR MIT"
 [dependencies]
 aws-lc-rs = "1.4"
 aws-lc-sys = { version = "0.11.0", features = ["bindgen"] }
-mls-rs-core = { path = "../mls-rs-core", version = "*" }
-mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "*" }
-mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "*" }
-mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "*" }
+mls-rs-core = { path = "../mls-rs-core", version = "0.14.0" }
+mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.4.0" }
+mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", version = "0.6.0" }
+mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.7.0" }
 thiserror = "1.0.40"
 zeroize = { version = "1", features = ["zeroize_derive"] }
 maybe-async = "0.2.7"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-mls-rs-core = { path = "../mls-rs-core", version = "*", features = ["test_suite"] }
+mls-rs-core = { path = "../mls-rs-core", version = "0.14.0", features = ["test_suite"] }
 futures-test = "0.3.25"
 
 [target.'cfg(mls_build_async)'.dependencies]
