--- a/mls-rs-crypto-hpke/Cargo.toml
+++ b/mls-rs-crypto-hpke/Cargo.toml
@@ -14,8 +14,8 @@ default = ["std"]
 std = ["mls-rs-core/std", "mls-rs-crypto-traits/std", "dep:thiserror", "zeroize/std"]
 
 [dependencies]
-mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "*" }
-mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "*" }
+mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.14.0" }
+mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "0.6.0" }
 thiserror = { version = "1.0.40", optional = true }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 cfg-if = "^1"
@@ -27,14 +27,14 @@ serde_json = { version = "^1.0" }
 assert_matches = "1.5.0"
 mockall = "0.11"
 hex = { version = "^0.4.3", features = ["serde"] }
-mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", features = ["mock"], version = "*" }
+mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", features = ["mock"], version = "0.6.0" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "*"}
+mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "0.5.0"}
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = { version = "0.3.26", default-features = false }
-mls-rs-crypto-rustcrypto = { path = "../mls-rs-crypto-rustcrypto", version = "*"}
+mls-rs-crypto-rustcrypto = { path = "../mls-rs-crypto-rustcrypto", version = "0.6.0"}
 getrandom = { version = "0.2", features = ["js"] }
 
 [target.'cfg(mls_build_async)'.dependencies]
