--- a/mls-rs-crypto-traits/Cargo.toml
+++ b/mls-rs-crypto-traits/Cargo.toml
@@ -14,5 +14,5 @@ std = ["mls-rs-core/std"]
 default = ["std"]
 
 [dependencies]
-mls-rs-core = { path = "../mls-rs-core", version = "*", default-features = false }
+mls-rs-core = { path = "../mls-rs-core", version = "0.14.0", default-features = false }
 mockall = { version = "^0.11", optional = true }
