--- a/mls-rs-ffi/Cargo.toml
+++ b/mls-rs-ffi/Cargo.toml
@@ -19,9 +19,9 @@ std = ["mls-rs/std", "safer-ffi-gen/std"]
 x509 = ["mls-rs-identity-x509"]
 
 [dependencies]
-mls-rs = { path = "../mls-rs", version = "*", features = ["ffi"] }
-mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "*", optional = true }
-mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "*", optional = true }
-mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite", version = "*", default-features = false, optional = true }
+mls-rs = { path = "../mls-rs", version = "0.34.0", features = ["ffi"] }
+mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "0.5.0", optional = true }
+mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", version = "0.7.0", optional = true }
+mls-rs-provider-sqlite = { path = "../mls-rs-provider-sqlite", version = "0.7.0", default-features = false, optional = true }
 safer-ffi = { version = "0.1.3", default-features = false }
 safer-ffi-gen = { version = "0.9.2", default-features = false }
