Remove duplicate HPKE tests and update readme

--- a/mls-rs-crypto-rustcrypto/Cargo.toml
+++ b/mls-rs-crypto-rustcrypto/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 description = "RustCrypto based CryptoProvider for mls-rs"
 homepage = "https://github.com/awslabs/mls-rs"
 repository = "https://github.com/awslabs/mls-rs"
-keywords = ["mls", "mls-rs", "rust crypto"]
+keywords = ["mls", "mls-rs"]
 license = "Apache-2.0 OR MIT"
 
 [features]
