--- a/mls-rs-crypto-awslc/Cargo.toml
+++ b/mls-rs-crypto-awslc/Cargo.toml
@@ -22,6 +22,7 @@ maybe-async = "0.2.7"
 [dev-dependencies]
 assert_matches = "1.5.0"
 mls-rs-core = { path = "../mls-rs-core", version = "0.14.0", features = ["test_suite"] }
+mls-rs-crypto-hpke = { path = "../mls-rs-crypto-hpke", version = "0.4.0", features = ["test_utils"] }
 futures-test = "0.3.25"
 
 [target.'cfg(mls_build_async)'.dependencies]
