Restore HPKE tests (#23)
* Restore HPKE tests

* Update mls-rs-crypto-hpke/Cargo.toml

---------

Co-authored-by: Marta Mularczyk <mulmarta@amazon.com>

--- a/mls-rs-crypto-hpke/Cargo.toml
+++ b/mls-rs-crypto-hpke/Cargo.toml
@@ -12,6 +12,7 @@ license = "Apache-2.0 OR MIT"
 [features]
 default = ["std"]
 std = ["mls-rs-core/std", "mls-rs-crypto-traits/std", "dep:thiserror", "zeroize/std"]
+test_utils = ["mls-rs-core/test_suite"]
 
 [dependencies]
 mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.14.0" }
