Add a WebCrypto CryptoProvider that works with Chrome

--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -19,14 +19,14 @@ jobs:
       run: wasm-pack test --headless --chrome --release --features browser
     - name: WASM mls-rs
       working-directory: mls-rs
-      run: wasm-pack test --headless --chrome --release --lib --test '*' --features test_util
+      run: wasm-pack test --headless --chrome --release --test '*' --features test_util
     - name: WASM mls-rs-core
       working-directory: mls-rs-core
       run: wasm-pack test --headless --chrome --release
     - name: WASM mls-rs-identity-x509
       working-directory: mls-rs-identity-x509
       run: wasm-pack test --headless --chrome --release
-    - name: WASM mls-rs-crypto-hpke
-      working-directory: mls-rs-crypto-hpke
+    - name: WASM mls-rs-crypto-webcrypto
+      working-directory: mls-rs-crypto-webcrypto
       run: wasm-pack test --headless --chrome --release
 
