--- a/mls-rs-crypto-traits/Cargo.toml
+++ b/mls-rs-crypto-traits/Cargo.toml
@@ -16,3 +16,7 @@ default = ["std"]
 [dependencies]
 mls-rs-core = { path = "../mls-rs-core", version = "0.14.0", default-features = false }
 mockall = { version = "^0.11", optional = true }
+maybe-async = "0.2.7"
+
+[target.'cfg(mls_build_async)'.dependencies]
+async-trait = "0.1.74"
