--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mls-rs"
-version = "0.34.2"
+version = "0.35.0"
 edition = "2021"
 description = "An implementation of Messaging Layer Security (RFC 9420)"
 homepage = "https://github.com/awslabs/mls-rs"
@@ -23,7 +23,6 @@ external_client = ["std"]
 grease = ["std"]
 fast_serialize = ["mls-rs-core/fast_serialize"]
 secret_tree_access = []
-state_update = []
 private_message = []
 custom_proposal = []
 tree_index = []
@@ -32,7 +31,7 @@ prior_epoch = []
 by_ref_proposal = []
 psk = []
 x509 = ["mls-rs-core/x509", "dep:mls-rs-identity-x509"]
-rfc_compliant = ["state_update", "private_message", "custom_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal", "mls-rs-core/rfc_compliant"]
+rfc_compliant = ["private_message", "custom_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal", "mls-rs-core/rfc_compliant"]
 
 std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "safer-ffi-gen?/std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
 
@@ -50,13 +49,13 @@ fuzz_util = ["test_util", "default", "dep:once_cell", "dep:mls-rs-crypto-openssl
 
 
 [dependencies]
-mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.14.0" }
+mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.15.0" }
 mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", default-features = false, version = "0.7.0", optional = true }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 mls-rs-codec = { version = "0.4.0", path = "../mls-rs-codec", default-features = false}
 thiserror = { version = "1.0.40", optional = true }
 futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
-itertools = { version = "0.11.0", default-features = false, features = ["use_alloc"]}
+itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"]}
 enum-iterator = "1.1.3"
 cfg-if = "1"
 async-trait = "0.1.74"
